# phantomuserland

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  artifacts  compile_commands.json  compile_flags.txt  compile_flags.txt~  files_comple_order.ipynb  goarc  libc_removal.md  used_apis
gdb-13.1/: Makefile  (+1 more)
src/: .gitignore  CMakeLists.txt  Makefile  README.md  analyze.sh
src/apps/tetris/: compiler_regression_test.ph  ru.dz.phantom.system.boot.ph
src/apps/tetris/tetris/: ru.dz.phantom.tetris.boot.ph  ru.dz.phantom.tetris.figure.ph  ru.dz.phantom.tetris.imagesmanager.ph  ru.dz.phantom.tetris.io.ph  ru.dz.phantom.tetris.mainmodule.ph  ru.dz.phantom.tetris.utilites.ph
src/etc/attic/vm/: jit_proto_386.S
src/etc/experiments/alpha-z/: run.sh
src/etc/experiments/radix_tree/: radix_tree.h
src/etc/experiments/zbmove/: zb_asm.S
src/genode_env/: #phantom_dyn_table.cc#  README.md  disk_backend.h  genode_env.cmake  local_attached_ram_dataspace.h  main.cc  phantom_anon_mmap.cc  phantom_entrypoints.h  phantom_env.h  phantom_framebuffer.cc  phantom_framebuffer.h  phantom_malloc.cc  phantom_sync.cc  phantom_sync.h  phantom_threads.h  phantom_threads.pthreads.cc  phantom_timer.cc  phantom_timer.h  phantom_unsorted.cc  phantom_vmem.cc  phantom_vmem.h  sigprocmask_stub.c  squid.cc  squid.h  tests_adapters.h  tests_hal.h  tests_hal_vmem.cc  tests_ph_api.cc  util.cc  util.h
src/include/: #pager_io_req.h#  debug_ext.h  disk_q.h  genode_disk_private.h  ph_io.h  ph_malloc.h  ph_os.h  ph_random.h  ph_setjmp.h  ph_string.h  ph_syslog.h  ph_time.h  phantom_disk.h  phantom_libc.h  phantom_types.h  thread_private.h  threads.h  utf8proc.h
src/include/acpi/: acapps.h  acgcc.h
src/include/compat/: embox.h  seabios.h
src/include/genode-amd64/arch/: arch-flags.h  arch-page.h  arch-types.h  arch_endian.h  arch_vmem_util.h
src/include/kernel/: #physalloc.h#  config.h  dpc.h  init.h  json.h  linux_compat.h  net_timer.h  stats.h  vm.h
src/include/stub_libc/: limits.h  stddef.h  stdint.h  stdio.h  stdlib.h
src/include/sys/: cdefs.h
src/include/video/: font.h  rect.h
src/include/vm/: alloc.h  bulk.h  connect.h  exec.h  internal.h  internal_da.h  p2c.h  root.h
src/pc/: internal.binary.pc  internal.bootstrap.pc  internal.class.pc  internal.cond.pc  internal.connection.pc  internal.float.pc  internal.int.pc  internal.io.tty.pc  internal.mutex.pc  internal.string.pc  internal.tcp.pc  internal.thread.pc  internal.udp.pc  internal.world.pc  phantom.application.pc  phantom.environment.pc  phantom.os.time.pc  phantom.osimpl.pc  phantom.user.pc  phantom.util.hashpair.pc  phantom.util.map.pc  ru.dz.demo.chart.pc  ru.dz.demo.start.pc  ru.dz.phantom.backgrounds.pc  ru.dz.phantom.resources.pc  ru.dz.phantom.system.class_loader.pc  ru.dz.phantom.system.iterable.pc  ru.dz.phantom.system.regression_tests.pc  ru.dz.phantom.system.runnable.pc  ru.dz.phantom.system.shell_callback.pc  ru.dz.phantom.system.thread_test.pc  ru.dz.phantom.tetris.figure.pc  ru.dz.phantom.tetris.io.pc  ru.dz.phantom.tetris.mainmodule.pc  ru.dz.phantom.tetris.playingfield.pc  ru.dz.phantom.tetris.utilites.pc  ru.dz.windows.root.pc  ru.dz.windows.window.pc  test.hier.child1.pc  test.hier.intermediate.pc  (+1 more)
src/phantom/: Makeconf-genode-amd64  makefile
src/phantom/gl/: .cproject  arrays.c  get.c  memory.c  phantom_gl.cmake  phantomdrvr.c  specbuf.c  vertex.c  zgl.h  zmath.c
src/phantom/isomem/: .project  amap.c  debug_misc.c  disk.c  disk_struct.c  dpc.c  fsck.c  genode_arch.c  genode_atomic.c  genode_credentials.c  genode_disk.c  genode_interrupts.h  genode_lprintf.c  genode_misc.c  genode_physalloc.c  genode_threads.c  genode_time.c  genode_vmem.c  hal.c  hal_physmem.c  hexdump.c  init.c  init_funcs.c  isomem.cmake  json_read.c  khash.c  main.c  makefile  makerules  net_timer.c  pagelist.c  pagelist.h  pager.c  pager.h  physalloc.c  pool.c  snap_internal.h  snap_sync.c  squid_cache.c  squid_cache.h  (+24 more)
src/phantom/isomem/contrib/: bcd.c  memchr.c  rindex.c  strcpy.c  strlcpy.c  strnlen.c
src/phantom/libfreetype/: afhints.c  aftypes.h  ftdebug.c  libfreetype.cmake
src/phantom/libwin/: bmp_pbm.c  ctl_text_field.c  ev_mouse.c  ev_private.h  ev_put.c  ev_window.c  libwin.cmake  rgba_bitblt_bits.c  rgba_scroll.c  rgba_zbmove.c  scr_getset.c  scr_painter.c  scr_repaint.c  scr_zbuf.c  utf8proc.c  vid_mouse_pointer.c  vid_read.c  vid_write.c  w_bg_win.c  w_box.c  w_menu.c  w_move_xy.c  w_order.c  w_taskbar.c  w_truetype.c  w_update.c
src/phantom/libwin/ia32/: asm_zbmove.S
src/phantom/vm/: .cproject  alloc.c  backtrace.c  bulk.c  code.c  create.c  directory.c  exec.c  ftype.c  gc.c  gc_on_snap.c  gcc_replacements.h  headless_screen.c  internal.c  jit.c  load_class.c  makerules  object.c  pvm_main.c  refdec.c  root.c  stacks.c  syscall.c  syscall_net.c  syscall_sync.c  syscall_tty.c  syscall_win.c  unix_hal_unix.c  vm.cmake  vm_sleep.c  vm_threads.c  wamr.cmake  win_hal.c  win_screen_win.c  winhal.h  wpaint.c  x11_display.c  x11_screen.c
src/phantom/vm/cont/: hashfunc.c
src/phantom/vm/sys/: i_http.c  i_io.c  i_net.c  i_time.c  i_wasm.c  i_wasm.h
src/phantom/vm/x11/: x11_screen.c
src/plib/resources/wasm/: img_decoder.wasm  simple_functions.wasm  wasi_functions.wasm
src/plib/roots/: Makefile
src/plib/roots/src/: stub.class.ph  stub.object.ph
src/plib/roots/src/internal/: internal.time.ph  internal.wasm.ph
src/plib/sys/: Makefile
src/run/img/: phantom.superblock
src/scripts/: cflow_analysis.ipynb  cflow_clean.ipynb  cflow_sandbox.ipynb  files_order.ipynb  libc_headers.ipynb
src/test/plc/src/: phantom.environment.ph  phantom.os.ph  phantom.os.time.ph  phantom.osimpl.ph  phantom.user.ph  phantom.util.hashmap.ph  phantom.util.hashpair.ph  phantom.util.map.ph  ru.dz.phantom.system.class_loader.ph  ru.dz.phantom.system.iterator.ph  ru.dz.phantom.system.regression_tests.ph  ru.dz.windows.base.ph  ru.dz.windows.root.ph  test.toPhantom.PhantomPrinter.ph
src/test/unit/: panic.c  utils.c
src/test/unit/suites/: suite_amap.c  suite_funcs.c  suite_pool.c  suite_skeleton.c  suite_wtty.c
src/tools/fs/: fsio.h
(+1168 files in other folders)
